feat: fastjson2 for serialization of GraphQLResponse and deserialization of GraphQLRequest (#2040)
[the previous integration of
kotlinx-serialization](https://github.com/ExpediaGroup/graphql-kotlin/pull/1937)
represented a performance improvement when deserializing requests,
however, responses are still being deserialized with jackson, recently
we found that fastjson2 is the [fastest serialization library for the
jvm](https://github.com/fabienrenaud/java-json-benchmark).

this PR adds an opt-in support for fastjson2 which provides an easy
integration with springboot codecs, the serializer relies on the same
jackson annotation, and just had to write a deserializer because of the
polymorphic nature of GraphQLRequest and GraphQLReponse

GraphQLRequest deserialization
<img width="1156" alt="image"
src="https://github.com/user-attachments/assets/8a1e56a2-0d6f-4118-904a-a5d584caac19">

GraphQLResponse serialization
<img width="1161" alt="image"
src="https://github.com/user-attachments/assets/cfa6c843-50de-42e2-8f8e-7722c722b048">

---------

Co-authored-by: Samuel Vazquez <samvazquez@expediagroup.com>